* Major changes in backend. Modes no longer have anything to do with the display of data. Currently there is only the traditional bar display system used by most damage meters, but implementing a new system should be fairly trivial.
* Added options to hiude DPS/HPS in damage and healing modes. Temporary solution which should be replaced with a generic field selection at some point.
* Bar display: Fixed background frame to use background instead of statusbars (thanks ethancentaurai).
* Bar display: Added options to enable or disable class colors for bars and for bar text.
* Bar display: Fixed issue with SharedMedia media not being available right away.

1.1-4
* Fixed whisper reports. Hopefully the last of the "fix what I broke last weekend" versions.

1.1-3
* Fixed reporting (oops).

1.1-2
* Fixed some leftover bugs from the transition to multiple windows.
* Now tracking DAMAGE_SHIELD events.
* Report settings are remembered across sessions.

1.1-1
* Multiple windows.
* New combat log event handling. Should be more scalable.
* Report menu can now use whispers.
* Enemy damage done/taken modes; shows a list of all enemies in a segment. Drilling down shows who did damage to or took damage from the enemy.

1.0-16
* Added Enemy damage done and Enemy damage taken modes. Shows a breakdown of damage per mob.

1.0-15
* Update for translations.

1.0-14
* Added an Interrupts mode.
* Fixed DK pets and similar minions not being counted.
* Fixed active set not being restored on logging in.
* Fixed Total Healing mode not being actually present...
* Fixed personal DPS feed again.
* Fixed spell misses again.

1.0-13
* Fixed spell misses not being recorded.
* Added a Total healing mode.
* Added more mode summary values.
* Fixed scrolling issue where you could not scroll down to the last bar.
* Fixed bar lengths often being off by some pixels.
* Fixed title bar being hidden sometimes after toggling window.
* Now discarding fight segments of 5 seconds or lower.

1.0-12